--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     def dynamicanimation_version = "1.0.0"
     implementation 'com.airbnb.android:lottie:3.4.4'
     implementation "androidx.dynamicanimation:dynamicanimation:$dynamicanimation_version"
